Remove cruft, clean up code and configuration

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,15 +1,12 @@
 
-port = 8080
+port = 18081
+port = ${?KAMON_HOST_METRICS_PORT}
 
 kamon {
   environment.service = "kamon-host-metrics"
   apm {
-    ingestion-api = "http://localhost:5000"
-    ingestion-api = "https://staging.apm.kamon.io/v1"
-    ingestion-api = ${?INGESTION_API}
-
-    api-key = "a6p3kkpuatebsfocteu5ceqt40" // staging "Dinko Test1" @ gmail.com
-    api-key = ${?API_KEY}
+    ingestion-api = ${?KAMON_INGESTION_API}
+    api-key = ${?KAMON_API_KEY}
   }
 
   status-page {
@@ -19,6 +16,7 @@ kamon {
     enabled = false
   }
 
+  # Only host metrics is collected
   modules {
     process-metrics.enabled = no
     jvm-metrics.enabled = no
