Rename project to Host Monitor
Including changes to README, package name, service name as reported
to Kamon, etc.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,7 +3,7 @@ port = 18081
 port = ${?KAMON_HOST_METRICS_PORT}
 
 kamon {
-  environment.service = "kamon-host-metrics"
+  environment.service = "host-monitor"
   apm {
     ingestion-api = ${?KAMON_INGESTION_API}
     api-key = ${?KAMON_API_KEY}
