--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,7 +1,4 @@
 
-port = 18081
-port = ${?KAMON_HOST_METRICS_PORT}
-
 kamon {
   environment.service = "host-monitor"
   apm {
@@ -9,12 +6,7 @@ kamon {
     api-key = ${?KAMON_API_KEY}
   }
 
-  status-page {
-
-    # When enabled Kamon will start an embedded web server to publish the status page mini-site, which contains basic
-    # system information that can be used for debugging and troubleshooting issues with Kamon.
-    enabled = false
-  }
+  status-page.listen.port = ${?KAMON_STATUS_PAGE_PORT}
 
   # Only host metrics is collected
   modules {
