Override "kamon.apm.agent" configuration value
This change makes it possible for the back-end to recognize
the special status of this service.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,9 +1,13 @@
 
 kamon {
   environment.service = "host-monitor"
+
   apm {
     ingestion-api = ${?KAMON_INGESTION_API}
     api-key = ${?KAMON_API_KEY}
+
+    # Kamon APM Host Monitor should be recognized as a non-service by the back-end
+    agent = "kamon-apm-host-monitor"
   }
 
   status-page.listen.port = ${?KAMON_STATUS_PAGE_PORT}
