Add agent version info to "kamon.apm.agent" configuration value
Having version information is important for the frontend.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,7 +7,7 @@ kamon {
     api-key = ${?KAMON_API_KEY}
 
     # Kamon APM Host Monitor should be recognized as a non-service by the back-end
-    agent = "kamon-apm-host-monitor"
+    agent = "kamon-2.x-apm-host-monitor"
   }
 
   status-page.listen.port = ${?KAMON_STATUS_PAGE_PORT}
